<resources>
    <string name="app_name">Ruang Tenun</string>
    <string name="title_home">Home</string>
    <string name="title_scanner">Scanner</string>
    <string name="title_profile">Profile</string>
    <string name="title_catalog">Catalog</string>
    <string name="tagline_home">What are you looking for today</string>
    <string name="username">Hi %1$s</string>
    <string name="favorite">Favorite</string>
    <string name="favorite_desc">Your Favorite Woven Fabric</string>
    <string name="settings">Settings</string>
    <string name="settings_desc">Password, Notification</string>
    <string name="search">Find Woven Fabric</string>
    <string name="near">Product Near</string>
    <string name="top_selling">Top Selling</string>
    <string name="title_product">Product</string>
    <string name="history_menu">History</string>
    <string name="new_scan">New Scan</string>
    <string name="sign_in">Sign in to your \nAccount</string>
    <string name="sign_in_description">Enter your email and password to log in </string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="login">Log In</string>
    <string name="or">Or</string>
    <string name="google_login">Continue with Google</string>
    <string name="facebook_login">Continue with Facebook</string>
    <string name="doesnt_have_account">Don’t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_up_description">Create an account to continue!</string>
    <string name="full_name">Full Name</string>
    <string name="set_password">Set Password</string>
    <string name="register">Register</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="back_button">Back Button</string>
    <string name="invalid_format_email">Format email tidak valid</string>
    <string name="empty_email_error">Email tidak boleh kosong</string>
    <string name="search_description">Search for an woven by taking a photo or uploading an image</string>
    <string name="upload_image">Upload An Image</string>
    <string name="take_photo">Take Photo</string>
    <string name="capture_image">Capture</string>
    <string name="switch_camera">Switch Camera</string>
    <string name="pick_image">Pick Image From Gallery</string>
    <string name="imageUpload">Uploaded Image</string>
    <string name="analyze_image">Analyze</string>
    <string name="title_search">Visual Search</string>
    <string name="permission_granted">Permission request granted</string>
    <string name="permission_denied">Permission request denied</string>
    <string name="no_image_selected">No Image Selected</string>
    <string name="location_denied">Location permission is not granted</string>
    <string name="location_failed">Failed to get location</string>
    <string name="location_acquired">Location acquired</string>
    <string name="navigate">Navigate</string>
    <string name="your_product">Your Product</string>
    <string name="profile_image">Profile Image</string>
    <string name="upload_product">Upload Product</string>
    <string name="empty_product_message">Your Product is empty</string>
    <string name="empty_history_message">you don\'t have any history yet</string>
    <string name="input_description_product">Explain Your Product</string>
    <string name="map_type">Map Type</string>
    <string name="map_default">Default</string>
    <string name="map_satellite">Satellite</string>
    <string name="map_terrain">Terrain</string>
    <string name="map_hybrid">Hybrid</string>
    <string name="close">Close</string>
    <string name="crop_canceled">Crop Canceled</string>
    <string name="crop_failed">Crop Failed</string>
    <string name="location_address_not_found">No address found for locatio</string>
    <string name="location_city_found">"You're in %1$s, %2$s"</string>
    <string name="title_menu_1">Welcome to Ruang Tenun</string>
    <string name="desc_menu_1">Find local weavers and buy products directly from them.</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="title_menu_2">Scan the woven fabric you find</string>
    <string name="desc_menu_2">With the Scan feature, you can easily identify the motif and origin of woven fabrics with just one snap!</string>
    <string name="title_menu_3">Ready to explore the world of weaving?</string>
    <string name="desc_menu_3">Let\'s start your adventure in Ruang Tenun! Login now!</string>
    <string name="product_name">Product Name:</string>
    <string name="product_link">Product Link</string>
    <string name="location_offline">offline store location if any</string>
    <string name="navigate_to_map">View Maps</string>
    <string name="select_location">Select Location</string>
    <string name="location_error">Location Not Found</string>
    <string name="detail_product">Detail Product</string>
    <string name="product_description">"Product Description: "</string>
    <string name="offline_location">Offline Location:</string>
    <string name="product_image">Product Image</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="empty_image_warning">Please Add An Image</string>
    <string name="product_photo">Preview Photo Of Product</string>
    <string name="categories_option">Choose Categories</string>
    <string name="image_save_failed">Failed Save Image</string>
    <string name="title_logout">Logout</string>
    <string name="login_failed">Login gagal</string>
    <string name="feature_not_yet_available">Fitur belum tersedia</string>
    <string name="ok">OK</string>
    <string name="email_and_password_cannot_be_empty">Email dan password tidak boleh kosong.</string>
    <string name="try_again">Coba Lagi</string>
    <string name="login_successful">Login berhasil</string>
    <string name="you_have_successfully_logged_in">Anda berhasil login</string>
    <string name="registration_successful">Register berhasil</string>
    <string name="register_failed">Register gagal</string>
    <string name="are_you_sure_want_to_logout">Apakah Anda yakin ingin keluar?</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="registration_failed_with_error">Registrasi gagal: %1$s</string>
    <string name="login_failed_with_error">Login gagal: %1$s</string>
    <string name="result_text">result class</string>
    <string name="title_result">Prediction Result</string>
    <string name="string_save_history">Save History</string>
    <string name="save_image">Save Prediction To History</string>
    <string name="are_you_sure_want_to_save">Are You Sure want to save?</string>
    <string name="failed_to_save_image">Failed To Save Image</string>
    <string name="no_products_found">No Products Found</string>
    <string name="no_products_nearby">No Products available nearby, but here are the nearest cities</string>
    <string name="search_product">Search Product</string>
    <string name="delete_history">Delete History</string>
    <string name="supporting_text">Are Your Sure To Delete History</string>
    <string name="no_data_found">No data found</string>
    <string name="data_saved_successfully">Data Saved Successfully</string>
    <string name="failed_to_save_data">Failed to save data</string>
    <string name="link_not_found">Link Website Not Found</string>
    <string name="data_deleted_successfully">Data Delete Successfully</string>
    <string name="failed_to_delete_data">Failed To Delete</string>
    <string name="accuracy_desc">Tingkat Keyakinan: %1$s</string>
    <string name="low">Low</string>
    <string name="enough">Enough</string>
    <string name="good">Good</string>
    <string name="very_good">Very Good</string>
    <string name="failed_save_image_to_storage">Failed to save image to storage</string>
    <string name="failed_to_predict">Failed To Predict</string>
    <string name="detail_catalog">Detail Catalog</string>
    <string name="ecommerce">Ecommerce</string>
    <string name="address">Address:</string>
    <string name="add_to_favorite">Favorite Product</string>
    <string name="success_add_favorite">Added to favorite</string>
    <string name="error_add_favorite">Cannot add to favorite</string>
    <string name="loading_add_favorite">Adding to favorites</string>
    <string name="success_remove_favorite">Success Delete Favorite</string>
    <string name="error_remove_favorite">Error Delete Favorite</string>
    <string name="favorite_menu">Favorite</string>
</resources>