<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_sign_in"
        style="@style/TextAppearance.Material3.HeadlineLarge"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:fontFamily="?android:attr/fontFamily"
        android:text="@string/sign_in"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline1" />

    <TextView
        android:id="@+id/tv_sign_in_description"
        style="@style/TextAppearance.Material3.LabelSmall"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="?android:attr/fontFamily"
        android:text="@string/sign_in_description"
        android:textColor="@color/grey"
        app:layout_constraintStart_toStartOf="@id/tv_sign_in"
        app:layout_constraintTop_toBottomOf="@id/tv_sign_in" />

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/email"
        android:textColor="@color/grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_sign_in_description" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tf_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        app:layout_constraintEnd_toEndOf="@id/tv_email"
        app:layout_constraintStart_toStartOf="@id/tv_email"
        app:layout_constraintTop_toBottomOf="@id/tv_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_input_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textStyle="bold" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tf_email" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tf_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        app:layout_constraintEnd_toEndOf="@id/tv_password"
        app:layout_constraintStart_toStartOf="@id/tv_password"
        app:layout_constraintTop_toBottomOf="@id/tv_password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textStyle="bold" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_forgot_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/forgot_password"
        android:textColor="@color/blue"
        app:layout_constraintEnd_toEndOf="@id/tf_password"
        app:layout_constraintTop_toBottomOf="@id/tf_password" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:padding="16dp"
        android:text="@string/login"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="@id/tf_password"
        app:layout_constraintStart_toStartOf="@id/tf_password"
        app:layout_constraintTop_toBottomOf="@id/tv_forgot_password" />

    <TextView
        android:id="@+id/tv_or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/or"
        app:layout_constraintEnd_toEndOf="@id/login_button"
        app:layout_constraintStart_toStartOf="@id/login_button"
        app:layout_constraintTop_toBottomOf="@id/login_button" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/google_login"
        style="@style/Widget.Material3.Button.OutlinedButton.Icon"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:padding="16dp"
        android:text="@string/google_login"
        app:cornerRadius="10dp"
        app:icon="@drawable/ic_google"
        app:iconTint="@null"
        app:layout_constraintEnd_toEndOf="@id/login_button"
        app:layout_constraintStart_toStartOf="@id/login_button"
        app:layout_constraintTop_toBottomOf="@id/tv_or" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/facebook_login"
        style="@style/Widget.Material3.Button.OutlinedButton.Icon"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:padding="16dp"
        android:text="@string/facebook_login"
        app:cornerRadius="10dp"
        app:icon="@drawable/ic_facebook"
        app:iconTint="@null"
        app:layout_constraintEnd_toEndOf="@id/google_login"
        app:layout_constraintStart_toStartOf="@id/google_login"
        app:layout_constraintTop_toBottomOf="@id/google_login" />

    <TextView
        android:id="@+id/tv_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/doesnt_have_account"
        app:layout_constraintEnd_toStartOf="@id/tv_sign_up_click"
        app:layout_constraintStart_toStartOf="@id/guideline2"
        app:layout_constraintTop_toBottomOf="@id/facebook_login" />

    <TextView
        android:id="@+id/tv_sign_up_click"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/sign_up"
        android:textColor="@color/blue"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintStart_toEndOf="@id/tv_sign_up"
        app:layout_constraintTop_toBottomOf="@id/facebook_login" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="32dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.50" />

</androidx.constraintlayout.widget.ConstraintLayout>