<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/back_button"
        style="?attr/materialIconButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:contentDescription="@string/back_button"
        app:icon="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_sign_up"
        style="@style/TextAppearance.Material3.HeadlineLarge"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:fontFamily="?android:attr/fontFamily"
        android:text="@string/sign_up"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/back_button" />

    <TextView
        android:id="@+id/tv_sign_up_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_description"
        android:textColor="@color/grey"
        app:layout_constraintStart_toStartOf="@id/tv_sign_up"
        app:layout_constraintTop_toBottomOf="@id/tv_sign_up" />

    <TextView
        android:id="@+id/tv_full_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/full_name"
        android:textColor="@color/grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_sign_up_description" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tf_full_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/full_name"
        app:layout_constraintEnd_toEndOf="@id/tv_full_name"
        app:layout_constraintStart_toStartOf="@id/tv_full_name"
        app:layout_constraintTop_toBottomOf="@id/tv_full_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_input_full_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textStyle="bold" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/email"
        android:textColor="@color/grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tf_full_name" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tf_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        app:layout_constraintEnd_toEndOf="@id/tv_email"
        app:layout_constraintStart_toStartOf="@id/tv_email"
        app:layout_constraintTop_toBottomOf="@id/tv_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_input_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textStyle="bold" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_set_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/set_password"
        android:textColor="@color/grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tf_email" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tf_set_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/set_password"
        app:layout_constraintEnd_toEndOf="@id/tv_set_password"
        app:layout_constraintStart_toStartOf="@id/tv_set_password"
        app:layout_constraintTop_toBottomOf="@id/tv_set_password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_input_set_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textStyle="bold" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/register_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:padding="16dp"
        android:text="@string/register"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="@id/tf_set_password"
        app:layout_constraintStart_toStartOf="@id/tf_set_password"
        app:layout_constraintTop_toBottomOf="@id/tf_set_password" />

    <TextView
        android:id="@+id/tv_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/already_have_account"
        app:layout_constraintEnd_toStartOf="@id/tv_sign_in_click"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/register_button" />

    <TextView
        android:id="@+id/tv_sign_in_click"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/login"
        android:textColor="@color/blue"
        app:layout_constraintEnd_toEndOf="@id/guideline"
        app:layout_constraintStart_toEndOf="@id/tv_sign_in"
        app:layout_constraintTop_toBottomOf="@id/register_button" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.50" />

</androidx.constraintlayout.widget.ConstraintLayout>